--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -136,7 +136,7 @@
   --color-mainmenu-sublevel-hover-text: #fff;
   --color-mainmenu-sublevel-hover-bg: #004A9F;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #004A9F;
+  --color-mainmenu-sublevel-button-bg: #04316A;
   --color-mainmenu-sublevel-button-hover-text: #fff;
   --color-mainmenu-sublevel-button-hover-bg: #041E42;
   --color-submenu-toplevel-bg: #fff;
