--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -98,7 +98,7 @@ $slider-height-md: 512px;
 				max-width: 100%;      
 				opacity: 1;
 				font-weight: 700;
-				display: inline-block;
+				display: block;
 				background-color: var(--color-primary-ci-hell);
 				border-radius: var(--border-radius, 0px);  
 				margin: 0 auto;
@@ -107,6 +107,7 @@ $slider-height-md: 512px;
 				
 				@media (min-width: $screen-sm)  {
 				    padding: var(--width-gutter-half, 15px) var(--width-gutter, 35px);
+				    display: inline-block;
 				}
 
 			    }
@@ -161,11 +162,17 @@ $slider-height-md: 512px;
 	
 		padding: 0;
 		width: 100%;
-	//	height: 70px;
-		bottom: var(--width-gutter-half);
+		bottom: 0;
 		top: auto;
 		transform: none;
-		
+		.hero-container  {
+		    padding-left: 0;
+		    padding-right: 0;
+		    @media (min-width: $screen-sm){
+			padding-left: var(--width-gutter-half);
+			padding-right: var(--width-gutter-half);
+		    }
+		}
 		@media (max-width: $screen-sm){			
 			margin: 0;
 			@include transform-translate(0, 0%);
