Erste Version für Beta. Für Release fehlen aber mindestens noch die Platzhalterbilder

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@
 //-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
-$farbfamilie: 'nat';
+$farbfamilie: 'zuv';
 // med, phil, nat, rw, tf, zuv
 
 
