--- a/src/sass/plugins/_cms-workflow.scss
+++ b/src/sass/plugins/_cms-workflow.scss
@@ -37,7 +37,7 @@
                 border: none;
 
                 @include no-list();
-
+/*
                 a {
                     text-align: center;
                     text-decoration: none;
@@ -53,8 +53,8 @@
                     background: #fff;
                     padding: 0 5px;
                     margin-right: 5px;
-
-                    @include border-radius(20px);
+		    border-radius: var(--border-radius-buttons, 3px);
+                    
 
                     &:before {
                         z-index: 10;
@@ -70,14 +70,69 @@
                     &:hover,
                     &:focus {
                         background: var(--color-MetaBackgroundLight);
-                        @include box-shadow(0 0 5px rgba(0, 0, 0, 0.2));
+			color: var(--color-MetaBackgroundLight);
                     }
                 }
+*/
 
-                &.lang-current.current {
-                    display: none;
-                }
-            }
+		a {
+		    &.lang-current.current {
+			display: none;
+		    }
+		}	   
+	 
+
+		
+		
+		
+		
+	    }
+            
+	   li {
+		box-shadow: none;
+		transition: initial;
+	//	@include px2rem($font-size-content-meta);
+
+	//	padding: 0.3rem 0.7rem;
+	//	border: 1px solid var(--color-ContentBorders);
+		
+		background: transparent;
+		font-weight: normal;
+		text-decoration: none;
+
+		a {
+		    box-shadow: none;
+		    text-decoration: none;
+		    transition: none;
+		    text-decoration-color: none;
+		    padding: 0.3rem 0.7rem;
+		    border-radius: var(--border-radius);
+		    
+		   
+		}
+		a:hover, a:focus {
+		    background-color: var(--color-primary-ci-hell);
+		    color: var(--color-primary-ci-hell-kontrast);
+		}
+	
+	    }
+	    li:first-child {
+		a::before {
+		    @include svg-icon-place(1rem);
+		    background-image: svg-icon-language($colorDefault);
+		    margin-right: 0.3rem;
+		}
+		a:hover::before, 
+		a:focus::before {
+		    background-image: svg-icon-language(#fff);
+		}
+	    }
+
+
+
+	    
+	    
+	    
         }
     }
 }
