--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -263,6 +263,7 @@
         display: flex;
         justify-content: center;
         max-height: 100%;
+	min-width: 150px;
     }
 
     .custom-logo-link {
