--- a/src/sass/structure/header/_orga-breadcrumb.scss
+++ b/src/sass/structure/header/_orga-breadcrumb.scss
@@ -1,7 +1,22 @@
 /*-----------------------------------------------------------------------------------*/
 /* Orga Breadcrumb (optional)
 /*-----------------------------------------------------------------------------------*/
-@use "sass:math";
+
+.orga-breadcrumb {
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+    height: 100%;
+    padding-left: var(--width-gutter-half);
+    padding-right: var(--width-gutter-half);
+    
+    @media (min-width: $screen-md) {
+        width: 100%;
+    }
+    @media (min-width: $screen-xl-min) {
+        width: $container-xl;
+    }
+}
 
 .orga-breadcrumb {
     display: none;
@@ -14,9 +29,6 @@
         display: block;
         padding-top: 5px;
         padding-bottom: 5px;
-        padding-left: $fau-gutter-halfwidth;
-        padding-right: $fau-gutter-halfwidth;
-        width: $container-sm;
         margin: 0 auto;
 
         li {
@@ -34,23 +46,11 @@
         }
     }
 
-    @media (min-width: $screen-md) {
-        width: $container-md;
-    }
-    @media (min-width: $screen-lg) {
-        width: $container-lg;
-    }
-    @media (min-width: $screen-xl + 20) {
-        width: $container-xl;
-    }
 }
 #meta .orga-breadcrumb {
     display: block;
     margin: 0.25rem 0 .5rem;
-    border-bottom: 1px solid map-get($colormap-misc, "TextLight");
-    li {
-        line-height: 1.5;
-    }
+    border-bottom: 1px solid var(--color-TextLight);
 
     @media (min-width: $screen-sm) {
         display: none;
