--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -53,7 +53,7 @@
      --color-MetaHover: #{$colorMetaHover};
      --color-MetaText: #fff;
      --color-MetaBackgroundLight: #{$colorMetaLightest};
-     
+     --color-MobileFlyoutMenuBackground: #{$color-mainmenu-toplevel-bg};
      --color-FAU: #{$colorZUV};
      --color-content-headlines: #{$color-content-headlines};
      --color-links: #{$color-links};
