--- a/src/sass/structure/header/_orga-breadcrumb.scss
+++ b/src/sass/structure/header/_orga-breadcrumb.scss
@@ -7,11 +7,12 @@
     margin-left: auto;
     width: 100%;
     height: 100%;
-    padding-left: var(--width-gutter-half);
-    padding-right: var(--width-gutter-half);
+
     
     @media (min-width: $screen-md) {
         width: 100%;
+	padding-left: var(--width-gutter-half);
+	padding-right: var(--width-gutter-half);
     }
     @media (min-width: $screen-xl-min) {
         width: $container-xl;
@@ -25,7 +26,7 @@
         margin-top: 0;
     }
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: block;
         padding-top: 5px;
         padding-bottom: 5px;
@@ -50,10 +51,9 @@
 #meta .orga-breadcrumb {
     display: block;
     margin: 0.25rem 0 .5rem;
-    border-bottom: 1px solid var(--color-TextLight);
+  //  border-bottom: 1px solid var(--color-TextLight);
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: none;
     }
 }
-
