--- a/print.css
+++ b/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.44
+Version: 2.3.45-5
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
